# memorang-backend

./: .gitignore  DEPLOY.md  MCQ Card (copy).widget  README.md  pyproject.toml  render.yaml
app/: __init__.py  auth.py  database.py  main.py  memory_store.py  request_context.py  server.py  thread_item_converter.py
app/agents/: starter_agent.py  title_agent.py
app/data/: __init__.py  mcq_store.py
app/models/: user.py
app/routers/: auth.py
app/widgets/: __init__.py  mcq_widget.py
scripts/: run-backend.cmd  run-backend.ps1  run-backend.sh
